[tool.poetry]
name = "la-env"
version = "0.1.0"
description = "Check environment variables"
authors = ["thiagola92 <thiagola92@gmail.com>"]
readme = "README.md"
packages = [{include = "la_env", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
